css adjustment fot tagline font size

--- a/wccresponsive/theme/static/stylesheets/app.css
+++ b/wccresponsive/theme/static/stylesheets/app.css
@@ -13517,7 +13517,8 @@ body {
 .main-header .logo-container .tagline {
   margin-left: 60px;
   margin-top: 15px;
-  line-height: 18px; }
+  line-height: 18px;
+  font-size: 15px; }
 .main-header .top-right-container {
   /*language*/
   /*search*/ }
