--- a/wccresponsive/theme/static/stylesheets/app.css
+++ b/wccresponsive/theme/static/stylesheets/app.css
@@ -13889,9 +13889,10 @@ table tr th {
   background-color: #666666;
   background-color: rgba(40, 40, 40, 0.7);
   color: White;
-  font-weight: bold;
+  font-weight: normal;
+  font-size: 12px;
   position: relative;
-  width: 190px;
+  /*width: 190px;*/
   top: -3em; }
 
 .eventDetails {
