--- a/wccresponsive/theme/static/stylesheets/app.css
+++ b/wccresponsive/theme/static/stylesheets/app.css
@@ -13843,6 +13843,10 @@ table tr th {
   margin-top: 20px;
   margin-bottom: 20px; }
 
+#mobile-prayerCycle {
+  border: 1px solid #cccccc;
+  padding: 10px; }
+
 /* @group Content Area */
 /* Editor styles */
 #content .discreet, #sidebar .discreet {
