--- a/wccresponsive/theme/static/stylesheets/app.css
+++ b/wccresponsive/theme/static/stylesheets/app.css
@@ -12687,7 +12687,7 @@ blockquote, blockquote p {
 
 .tab-bar {
   -webkit-backface-visibility: hidden;
-  background: #333333;
+  background: white;
   color: white;
   height: 3rem;
   line-height: 3rem;
@@ -12705,7 +12705,7 @@ blockquote, blockquote p {
   height: 3rem;
   position: absolute;
   top: 0;
-  border-right: solid 1px #1a1a1a;
+  border-right: solid 1px grey;
   left: 0; }
 
 .right-small {
@@ -12713,7 +12713,7 @@ blockquote, blockquote p {
   height: 3rem;
   position: absolute;
   top: 0;
-  border-left: solid 1px #1a1a1a;
+  border-left: solid 1px grey;
   right: 0; }
 
 .tab-bar-section {
@@ -12827,7 +12827,7 @@ ul.off-canvas-list {
     border-bottom: 1px solid #262626;
     transition: background 300ms ease; }
     ul.off-canvas-list li a:hover {
-      background: #242424; }
+      background: #b3b3b3; }
 
 .move-right > .inner-wrap {
   -ms-transform: translate(16.66667rem, 0);
@@ -13849,6 +13849,22 @@ table tr th {
 #mobile-prayerCycle {
   border: 1px solid #cccccc;
   padding: 10px; }
+
+/*mobile toggle menu*/
+#m-toggle-menu {
+  background: none maroon; }
+
+#m-btn-search {
+  color: #222222;
+  left: 3rem;
+  width: 3rem; }
+
+#m-logo {
+  left: 6rem;
+  color: #222222;
+  text-align: left; }
+  #m-logo h1 {
+    color: #222222; }
 
 /* @group Content Area */
 /* Editor styles */
