--- a/wccresponsive/theme/static/stylesheets/app.css
+++ b/wccresponsive/theme/static/stylesheets/app.css
@@ -13852,7 +13852,7 @@ table tr th {
 
 /*mobile toggle menu*/
 #m-toggle-menu {
-  background: none maroon; }
+  background: none #205c90; }
 
 #m-btn-search {
   color: #222222;
