--- a/wccresponsive/theme/skins/wccresponsive_theme/wcc-scheme-red.css
+++ b/wccresponsive/theme/skins/wccresponsive_theme/wcc-scheme-red.css
@@ -61,3 +61,11 @@ button:hover, .button:hover, input[type="button"]:hover, input[type="reset"]:hov
 .tinynav, .tinynav:focus,.tinynav:hover{
     background-color: #800000;
 }
+
+.bss-slides figcaption,
+#m-toggle-menu{
+    background: none #800000;
+}
+.bss-next, .bss-prev{
+    color: #800000;
+}
