--- a/wccresponsive/theme/static/stylesheets/bss-slider.css
+++ b/wccresponsive/theme/static/stylesheets/bss-slider.css
@@ -36,7 +36,7 @@
   left: 0;
   padding: .25em;
   color: #fff;
-  background: #800000;
+  background: #205C90;
   opacity: 0;
   transition: opacity 1.2s;
 }
@@ -49,7 +49,7 @@
   text-decoration: none;
 }
 .bss-next, .bss-prev{
-  color: #800000;
+  color: #205C90;
   position: absolute;
   bottom: .50em;
   z-index: 4;
