adjustment for mobile slider

--- a/wccresponsive/theme/static/stylesheets/bss-slider.css
+++ b/wccresponsive/theme/static/stylesheets/bss-slider.css
@@ -1,6 +1,7 @@
 .bss-slides{
   position: relative;
-  display: block;    
+  display: block;
+  margin-top: -20px; 
 }
 .bss-slides:focus{
  outline: 0;
