remove float for class image-right if viewed at small screen device

--- a/wccresponsive/theme/static/stylesheets/app.css
+++ b/wccresponsive/theme/static/stylesheets/app.css
@@ -13804,7 +13804,7 @@ body.subsite {
     margin: 0; }
   #portal-globalnav {
     display: none; }
-  .image-left, .image-left, #content img.tileImage, #content div.newsImageContainer {
+  .image-left, .image-right, #content img.tileImage, #content div.newsImageContainer {
     float: none !important;
     margin: 0 !important; } }
 
