--- a/wccresponsive/theme/static/stylesheets/app.css
+++ b/wccresponsive/theme/static/stylesheets/app.css
@@ -13909,6 +13909,65 @@ table tr th {
 .mobile-languageselector li.language-pt, .mobile-languageselector li.language-ko, #portal-languageselector li.language-pt, #portal-languageselector li.language-ko {
   display: none; }
 
+/*profile page*/
+.author-prof-wrapper .author-prof {
+  width: 200px;
+  min-height: 100px;
+  float: right;
+  margin: 0 0 20px 20px;
+  background-color: #fafafa;
+  -moz-box-shadow: #999999 2px 2px 10px;
+  -webkit-box-shadow: #999999 2px 2px 10px;
+  box-shadow: #999999 2px 2px 10px; }
+  .author-prof-wrapper .author-prof > div {
+    padding: 10px 20px 20px; }
+    .author-prof-wrapper .author-prof > div h1 {
+      text-transform: uppercase;
+      margin: 10px 0;
+      font-weight: 300;
+      letter-spacing: 1px;
+      font-size: 20px; }
+    .author-prof-wrapper .author-prof > div p {
+      margin-bottom: 0; }
+
+/*post article*/
+.post-article {
+  position: relative;
+  margin-bottom: 30px; }
+  .post-article .post_title {
+    margin-right: 40px; }
+  .post-article .post_author a {
+    font-style: italic;
+    color: #cccccc;
+    margin-bottom: 1rem; }
+  .post-article .post_comment {
+    font-style: italic;
+    color: #666666;
+    margin-bottom: 1rem; }
+  .post-article .comment-count {
+    position: absolute;
+    white-space: nowrap;
+    top: 0;
+    right: 0;
+    width: 32px;
+    height: 32px;
+    overflow: hidden; }
+    .post-article .comment-count i {
+      position: absolute;
+      color: #cccccc; }
+    .post-article .comment-count span {
+      position: absolute;
+      top: 6px;
+      left: 0;
+      right: 0;
+      color: white;
+      font-size: 13px;
+      text-align: center; }
+  .post-article .post_tag {
+    color: #cccccc;
+    margin: 1em 0;
+    font-size: 75%; }
+
 /* @group Content Area */
 /* Editor styles */
 #content .discreet, #sidebar .discreet {
