--- a/wccresponsive/theme/static/stylesheets/app.css
+++ b/wccresponsive/theme/static/stylesheets/app.css
@@ -14165,6 +14165,10 @@ table.listing tbody tr.odd {
 
 table.listing tbody tr td {
   background: transparent; }
+  
+table.listing tbody tr td a { 
+  word-break: break-word;
+  word-wrap: break-word;}
 
 table.listing tbody tr.odd td {
   background: #eeeeee; }
